--- a/music.html
+++ b/music.html
@@ -27,7 +27,7 @@
                             <a href="#" class="nav-link">Tour</a>
                         </li>
                         <li class="nav-item mr-2 active">
-                            <a href="#" class="nav-link">Music</a>
+                            <a href="music.html" class="nav-link">Music</a>
                         </li>
                         <li class="nav-item mr-2">
                             <a href="#" class="nav-link">Gallery</a>
@@ -36,7 +36,7 @@
                             <a href="#" class="nav-link">About</a>
                         </li>
                         <li class="nav-item mr-2">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto flex-row" id="social-links">
@@ -81,17 +81,18 @@
     </section>
 
     <section class="container music-content">
+        <h3>Releases</h3>
         <div class="row">
             <div class="col-lg-4"></div>
             <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
-                    <h5 class="card-title">Happy Lane EP</h5>
-                    <p class="card-text">Release: 08/03/2021.</p>
+                        <h5 class="card-title">Happy Lane EP</h5>
+                        <p class="card-text">Release: 08/03/2021.</p>
                         <a href="https://oddsocksband.bandcamp.com/" class="btn btn-primary">Buy now</a>
+                    </div>
                 </div>
             </div>
-        </div>
             <div class="col-lg-4"></div>
         </div>
 
