--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,34 @@
         <!-- End of navbar --> 
     </header>
 
+    <section class="container" id="contact-info">
+        <h3>Contact information</h3>
+        <div class="row">
+            <div class="col-12">
+                <h4>General Enquiries</h4>
+                <p>littleparadise@gmail.com</p>
+                <h4>Bookings</h4>
+                <p>bookings.littleparadise@gmail.com</p>
+            </div>
+        </div>
+
+    </section>
+        
+    <section class="container" id="email-form">
+        <div class="row">
+            <div class="col-12">
+                <form method="post">
+                    <h3>Join our Mailing List!</h3>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" name="email" required>   
+                    <input type="submit" value="Sign Up">    
+                </form>
+            </div>
+        </div>
+
+    </section>
 
  
         <!-- Footer -->
