--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                             <a href="music.html" class="nav-link">Music</a>
                         </li>
                         <li class="nav-item mr-2">
-                            <a href="#" class="nav-link">Gallery</a>
+                            <a href="gallery.html" class="nav-link">Gallery</a>
                         </li>
                         <li class="nav-item mr-2">
                             <a href="#" class="nav-link">About</a>
