add: more images to assets folder

--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
     <header>
         <!-- Navbar -->
         
-            <nav class="navbar navbar-light navbar-expand-md fixed-top">
+            <nav class="navbar navbar-light navbar-expand-md">
                 <a href="index.html" class="navbar-brand">Little Paradise</a>
 
                 <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,8 +59,17 @@
         <!-- End of navbar --> 
     </header>
 
+        <section class="containter-fluid">
+        <h2>Gallery</h2>
 
-
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <img src="" alt="">
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+            </div>
+        </div>
+        </section>
  
         <!-- Footer -->
     <footer class="page-footer">
