add: images to gallery.html in basic masonary style

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <a href="#" class="nav-link">About</a>
                         </li>
                         <li class="nav-item mr-2">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto flex-row" id="social-links">
@@ -84,7 +84,7 @@
             <div class="col-sm-12 col-lg-3 cta">
                 <div class="cta-content">
                     <h3>EMAIL UPDATES</h3>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up</a>
+                    <a class="btn btn-primary btn-lg" href="contact.html" role="button">Sign Up</a>
                 </div>          
             </div>
 
