--- a/gallery.html
+++ b/gallery.html
@@ -59,16 +59,18 @@
         <!-- End of navbar --> 
     </header>
 
-        <section class="containter-fluid">
         <h2>Gallery</h2>
-
-        <div class="row">
-            <div class="col-sm-6 col-md-4 col-lg-3">
-                <img src="" alt="">
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3">
-            </div>
-        </div>
+        <section id="photo">
+            <img src="assets/images/littleparadise.jpg" alt="">
+            <img src="assets/images/littleparadise2.jpg" alt="">
+            <img src="assets/images/littleparadise3.jpg" alt="">
+            <img src="assets/images/littleparadise4.jpg" alt="">
+            <img src="assets/images/littleparadise5.jpg" alt="">
+            <img src="assets/images/littleparadise6.jpg" alt="">
+            <img src="assets/images/littleparadise7.jpg" alt="">
+            <img src="assets/images/littleparadise8.jpg" alt="">
+            <img src="assets/images/littleparadise9.jpg" alt="">
+            <img src="assets/images/littleparadise10.jpg" alt="">
         </section>
  
         <!-- Footer -->
