--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <header>
         <!-- Navbar -->
         
-            <nav class="navbar navbar-light navbar-expand-md fixed-top">
+            <nav class="navbar navbar-light navbar-expand-md">
                 <a href="index.html" class="navbar-brand">Little Paradise</a>
 
                 <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,9 +33,9 @@
                             <a href="gallery.html" class="nav-link">Gallery</a>
                         </li>
                         <li class="nav-item mr-2">
-                            <a href="about.html" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link active">About</a>
                         </li>
-                        <li class="nav-item mr-2 active">
+                        <li class="nav-item mr-2">
                             <a href="contact.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
@@ -59,34 +59,6 @@
         <!-- End of navbar --> 
     </header>
 
-    <section class="container" id="contact-info">
-        <h3>Contact information</h3>
-        <div class="row">
-            <div class="col-12">
-                <h4>General Enquiries</h4>
-                <p>littleparadise@gmail.com</p>
-                <h4>Bookings</h4>
-                <p>bookings.littleparadise@gmail.com</p>
-            </div>
-        </div>
-
-    </section>
-        
-    <section class="container" id="email-form">
-        <div class="row">
-            <div class="col-12">
-                <form method="post">
-                    <h3>Join our Mailing List!</h3>
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required>
-                    <label for="email">Email Address</label>
-                    <input type="email" id="email" name="email" required>   
-                    <input type="submit" value="Sign Up">    
-                </form>
-            </div>
-        </div>
-
-    </section>
 
  
         <!-- Footer -->
