--- a/music.html
+++ b/music.html
@@ -33,7 +33,7 @@
                             <a href="gallery.html" class="nav-link">Gallery</a>
                         </li>
                         <li class="nav-item mr-2">
-                            <a href="#" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link">About</a>
                         </li>
                         <li class="nav-item mr-2">
                             <a href="contact.html" class="nav-link">Contact</a>
