--- a/about.html
+++ b/about.html
@@ -59,7 +59,19 @@
         <!-- End of navbar --> 
     </header>
 
+        <h2>About</h2>
 
+        <section class="container">
+           <div>
+                <img src="/assets/images/littleparadise.jpg" alt="Little Paradise road sign" id="about-image">
+           </div>        
+        </section>
+
+        <section>
+            <article>
+                <p>Little Paradise is the musical brainchild of Michael Kilcooley and Francis Kershaw.</p>
+            </article>
+        </section>
  
         <!-- Footer -->
     <footer class="page-footer">
