--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <header>
         <!-- Navbar -->
         
-            <nav class="navbar navbar-light navbar-expand-md fixed-top">
+            <nav class="navbar navbar-light navbar-expand-md">
                 <a href="index.html" class="navbar-brand">Little Paradise</a>
 
                 <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,6 +59,7 @@
         <!-- End of navbar --> 
     </header>
 
+    <h2>Contact Us</h2>
     <section class="container" id="contact-info">
         <h3>Contact information</h3>
         <div class="row">
