--- a/music.html
+++ b/music.html
@@ -14,7 +14,7 @@
     <header>
         <!-- Navbar -->
         
-            <nav class="navbar navbar-light navbar-expand-md fixed-top">
+            <nav class="navbar navbar-light navbar-expand-md">
                 <a href="index.html" class="navbar-brand">Little Paradise</a>
 
                 <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
         <!-- End of navbar --> 
     </header>
 
-    <h2 class="display-4 page-heading">Music</h2>
+    <h2>Music</h2>
 
     <!-- Embedded YouTube video -->
     <section class="container music-content">
