add: placeholder text to about section

--- a/about.html
+++ b/about.html
@@ -69,7 +69,10 @@
 
         <section>
             <article>
-                <p>Little Paradise is the musical brainchild of Michael Kilcooley and Francis Kershaw.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem suscipit ipsum aliquam. Eos soluta, quibusdam cum necessitatibus, sit maiores animi consectetur magni tempora, mollitia veritatis impedit ratione consequatur magnam ipsa?
+                Voluptatum at repellat consequatur delectus, libero amet dolorum corrupti nam vitae cupiditate tempore placeat nisi eum nesciunt sunt ratione rem nulla. Recusandae tempora quas adipisci consequatur rerum, repellat quaerat autem.
+                Harum soluta quibusdam nostrum molestias nesciunt voluptas vero error, ullam perferendis alias porro tempora quis dignissimos vitae animi sapiente cupiditate totam. Labore facilis, aliquid repellendus delectus provident saepe est modi.                      
+                </p>
             </article>
         </section>
  
