--- a/music.html
+++ b/music.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav mx-auto" id="navigation-links">
                         <li class="nav-item mr-2">
-                            <a href="#" class="nav-link">Tour</a>
+                            <a href="index.html#tour-dates" class="nav-link">Tour</a>
                         </li>
                         <li class="nav-item mr-2 active">
                             <a href="music.html" class="nav-link">Music</a>
