amend: CTA content and add background color

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             <div class="col-sm-12 col-lg-4 cta">
                 <div class="cta-content">
-                    <h3>NEW EP - OUT NOW</h3>
+                    <h3>HAPPY LANE EP</h3>
                     <a class="btn btn-primary btn-lg" href="#" role="button">Buy Now</a>
                 </div>
             </div>
