--- a/index.html
+++ b/index.html
@@ -97,26 +97,26 @@
 
         <!-- Tour dates -->
     <section class="container" id="tour-dates">
-        <h3>Tour Dates</h3>
+        <h3 id="tour-header">Tour Dates</h3>
         <div class="row">
             <div class="col-12 col-md-3"><h4>7 May 2021</h4></div>
-            <div class="col-12 col-md-3">Student's Union, Bristol</div>
-            <div class="col-12 col-md-3">SOLD OUT</div>
+            <div class="col-12 col-md-3 venue">Student's Union, Bristol</div>
+            <div class="col-12 col-md-3"><button type="button" class="btn btn-dark">Tickets</button></div>
         </div>
         <div class="row">
             <div class="col-12 col-md-3"><h4>7 May 2021</h4></div>
-            <div class="col-12 col-md-3">Student's Union, Bristol</div>
-            <div class="col-12 col-md-3">SOLD OUT</div>
+            <div class="col-12 col-md-3 venue">Student's Union, Bristol</div>
+            <div class="col-12 col-md-3"><button type="button" class="btn btn-dark">Tickets</button></div>
         </div>
         <div class="row">
             <div class="col-12 col-md-3"><h4>7 May 2021</h4></div>
-            <div class="col-12 col-md-3">Student's Union, Bristol</div>
-            <div class="col-12 col-md-3">SOLD OUT</div>
+            <div class="col-12 col-md-3 venue">Student's Union, Bristol</div>
+            <div class="col-12 col-md-3"><button type="button" class="btn btn-dark">Tickets</button></div>
         </div>
         <div class="row">
             <div class="col-12 col-md-3"><h4>7 May 2021</h4></div>
-            <div class="col-12 col-md-3">Student's Union, Bristol</div>
-            <div class="col-12 col-md-3">SOLD OUT</div>
+            <div class="col-12 col-md-3 venue">Student's Union, Bristol</div>
+            <div class="col-12 col-md-3"><button type="button" class="btn btn-dark" disabled>SOLD OUT</button></div>
         </div>
     </section>
         <!-- End of tour dates -->
