amend: bootstrap col sizing for cta section to stay consistent

--- a/index.html
+++ b/index.html
@@ -71,25 +71,26 @@
         <!--CTA section x 2 -->
     <section class="container" id="cta-section">
         <div class="row">      
-           <div class="col-lg-1 d-none d-lg-block"></div>
+           
+            <div class="col-md-1 d-none d-md-block cta"></div>
 
-            <div class="col-sm-12 col-lg-4 cta">
+            <div class="col-sm-12 col-md-4 cta">
                 <div class="cta-content">
                     <h3>HAPPY LANE EP</h3>
                     <a class="btn btn-primary btn-lg" href="#" role="button">Buy Now</a>
                 </div>
             </div>
 
-            <div class="col-lg-2 d-none d-lg-block"></div>
+            <div class="col-md-2 d-none d-md-block cta"></div>
             
-            <div class="col-sm-12 col-lg-4 cta">
+            <div class="col-sm-12 col-md-4 cta">
                 <div class="cta-content">
                     <h3>EMAIL UPDATES</h3>
                     <a class="btn btn-primary btn-lg" href="contact.html" role="button">Sign Up</a>
                 </div>          
             </div>
 
-            <div class="col-lg-1 d-none d-lg-block"></div>
+            <div class="col-md-1 d-none d-md-block cta"></div>
 
         </div>
     </section>
