add: placeholder overlay text for hero image

--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
     </header>
 
         <!-- Hero image -->
-    <section class="container-fluid">
+    <section class="container-fluid" id="hero-outer">
         <div class="row">
             <div class="col-12" id="hero-image"></div>
+        </div>
+        <div id="cover-text">
+                <h3>Little Paradise</h3>
+                <h4>Bristol's best new indie band</h4>
         </div>
     </section>
         <!-- End of hero image -->
