add: custom animation so that items appear first followed by second

--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
         <!-- Hero image -->
     <section class="container-fluid" id="hero-outer">
         <div class="row">
-            <div class="col-12" id="hero-image"></div>
+            <div class="col-12 appear-first" id="hero-image"></div>
         </div>
-        <div id="cover-text">
+        <!-- <div id="cover-text" class="appear-second">
                 <h3>Little Paradise</h3>
                 <h4>Bristol's best new indie band</h4>
-        </div>
+        </div> -->
     </section>
         <!-- End of hero image -->
 
         <!--CTA section x 2 -->
-    <section class="container" id="cta-section">
+    <section class="container appear-second" id="cta-section">
         <div class="row">      
            
             <div class="col-md-1 d-none d-md-block"></div>
@@ -100,7 +100,7 @@
     </section>
         <!--End of CTA section -->
 
-    <section class="container music-content">
+    <section class="container">
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8"><iframe id="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen><p>Your device does not support iframes</p></iframe></div>
