--- a/music.html
+++ b/music.html
@@ -63,7 +63,7 @@
 
     <!-- Embedded YouTube video -->
         
-    <section class="container music-content">
+    <section class="container music-content appear-first">
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8">
@@ -73,7 +73,7 @@
             </div>
     </section>
 
-    <section class="container music-content">
+    <section class="container music-content appear-first">
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8"><iframe id="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen><p>Your device does not support iframes</p></iframe></div>
@@ -81,7 +81,7 @@
             </div>
     </section>
 
-    <section class="container music-content">
+    <section class="container music-content appear-first">
         <h3>Releases</h3>
         <div class="row">
             <div class="col-lg-4"></div>
