--- a/music.html
+++ b/music.html
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8">
-                    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1189324765&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-777584877" title="Little Paradise" target="_blank" style="color: #cccccc; text-decoration: none;">Little Paradise</a> · <a href="https://soundcloud.com/user-777584877/sets/happy-lanes-ep-08-03-2021" title="Happy Lanes - EP (08.03.2021)" target="_blank" style="color: #cccccc; text-decoration: none;">Happy Lanes - EP (08.03.2021)</a></div>
+                    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1189324765&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/little-paradise-bristol" title="Little Paradise" target="_blank" style="color: #cccccc; text-decoration: none;">Little Paradise</a> · <a href="https://soundcloud.com/user-777584877/sets/happy-lanes-ep-08-03-2021" title="Happy Lanes - EP (08.03.2021)" target="_blank" style="color: #cccccc; text-decoration: none;">Happy Lanes - EP (08.03.2021)</a></div>
                 </div>
                 <div class="col-lg-2"></div>
             </div>
@@ -87,10 +87,10 @@
             <div class="col-lg-4"></div>
             <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                    <div class="card-body">
+                    <div class="card-body" id="new-ep">
                         <h5 class="card-title">Happy Lane EP</h5>
                         <p class="card-text">Release: 08/03/2021.</p>
-                        <a href="https://oddsocksband.bandcamp.com/" class="btn btn-primary">Buy now</a>
+                        <a class="btn btn-primary btn-lg" href="https://oddsocksband.bandcamp.com/" role="button" target="_blank">Buy Now</a>
                     </div>
                 </div>
             </div>
