add: animations to all h2 elements to appear first when the page loads

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         <!-- End of navbar --> 
     </header>
 
-        <h2>About</h2>
+        <h2 class="appear-first">About</h2>
 
         <section class="container">
            <div>
