--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
         <!-- End of navbar --> 
     </header>
 
-    <h2>Contact Us</h2>
+    <h2 class="appear-first">Contact Us</h2>
     <section class="container" id="contact-info">
         <h3>Contact information</h3>
         <div class="row">
