--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,7 @@
         <!-- End of navbar --> 
     </header>
 
-        <h2>Gallery</h2>
+        <h2 class="appear-first">Gallery</h2>
         <section id="photo">
             <img src="assets/images/littleparadise.jpg" alt="">
             <img src="assets/images/littleparadise2.jpg" alt="">
