fix: spacing bug on EP release card

--- a/music.html
+++ b/music.html
@@ -89,20 +89,20 @@
 
     <!-- Available releases section -->
 
-    <section class="container music-content appear-first">
-        <h2>Releases</h2>
+    <section class="container music-content appear-second">
+        <h2 class="mx-auto">Releases</h2>
         <div class="row">
-                <div class="col-sm-4 d-none d-sm-block"></div>
-                <div class="col-12 col-sm-4">
-                    <div class="card" style="width: 18rem;">
-                        <a href="https//www.bandcamp.com"><img src="assets/images/hero-placeholder.jpg" class="card-img-top" alt="Happy Lane EP purchase link"></a>
-                        <div class="card-body">
-                            <h3 class="card-text">Happy Lane EP (2021)</h3>
-                            <a class="btn btn-primary btn-lg" href="#" role="button">Buy Now</a>
-                        </div>
+
+            <div class="col-12">
+                <div class="card mx-auto" style="width: 18rem;">
+                    <a href="https//www.bandcamp.com"><img src="assets/images/hero-placeholder.jpg" class="card-img-top" alt="Happy Lane EP purchase link"></a>
+                    <div class="card-body">
+                        <h3 class="card-text">Happy Lane EP (2021)</h3>
+                        <a class="btn btn-primary btn-lg" href="#" role="button">Buy Now</a>
                     </div>
                 </div>
-                <div class="col-sm-4 d-none d-sm-block"></div>       
+            </div>
+
         </div>
 
     </section>
