--- a/music.html
+++ b/music.html
@@ -64,6 +64,7 @@
     <!-- Embedded SoundCloud playlist section -->
 
     <section class="container music-content appear-second">
+            <h3>SoundCloud</h3>
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8">
@@ -78,6 +79,7 @@
     <!-- Embedded YouTube video section -->
 
     <section class="container music-content appear-second">
+            <h3>YouTube</h3>
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8"><iframe id="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen><p>Your device does not support iframes</p></iframe></div>
