--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,37 @@
         <!-- End of navbar --> 
     </header>
 
-    <h2 class="appear-first">Contact Us</h2>
-    <section class="container" id="contact-info">
-        <h3>Contact information</h3>
+    <h1 class="appear-first">Contact</h1>
+
+            <!-- Mailing list sign-up -->
+        
+    <section class="container appear-second cta" id="email-form">
         <div class="row">
+            <div class="col-12">
+                <form method="post">
+                    <h3>Join our Mailing List!</h3>
+                    <label for="name">Name</label>
+                    <br>
+                    <input type="text" id="name" name="name" required>
+                    <br>
+                    <label for="email">Email Address</label>
+                    <br>
+                    <input type="email" id="email" name="email" required> 
+                    <br>  
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up</a>   
+                </form>
+            </div>
+        </div>
+
+    </section>
+
+        <!-- End of mailing list sign-up -->
+ 
+
+        <!-- Contact information -->
+
+    <section class="container cta appear-second" id="contact-info">
+        <div class="row cta-content">
             <div class="col-12">
                 <h4>General Enquiries</h4>
                 <p>littleparadise@gmail.com</p>
@@ -72,24 +99,10 @@
         </div>
 
     </section>
-        
-    <section class="container" id="email-form">
-        <div class="row">
-            <div class="col-12">
-                <form method="post">
-                    <h3>Join our Mailing List!</h3>
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required>
-                    <label for="email">Email Address</label>
-                    <input type="email" id="email" name="email" required>   
-                    <input type="submit" value="Sign Up">    
-                </form>
-            </div>
-        </div>
 
-    </section>
+        <!-- End of contact information -->
 
- 
+
         <!-- Footer -->
     <footer class="page-footer">
         <div>
