--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="col-12 col-md-4 cta">
                 <div class="cta-content">
                     <h2>HAPPY LANE EP</h2>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Buy Now</a>
+                    <a class="btn btn-primary btn-lg" href="#" role="button" target="_blank">Buy Now</a>
                 </div>
             </div>
 
@@ -111,7 +111,7 @@
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4"><h4>7 May 2021</h4></div>
             <div class="col-12 col-md-5 venue"><p>The Louisiana, Bristol</p></div>
-            <div class="col-12 col-md-2"><button type="button" class="btn btn-dark">TICKETS</button></div>
+            <div class="col-12 col-md-2"><a class="btn btn-dark" href="http://www.ticketmaster.com" role="button" target="_blank">TICKETS</a></div>
         </div>
         <hr>
         <br>
@@ -119,7 +119,7 @@
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4"><h4>6 July 2021</h4></div>
             <div class="col-12 col-md-5 venue"><p>Mr Wolf's, Bristol</p></div>
-            <div class="col-12 col-md-2"><button type="button" class="btn btn-dark">TICKETS</button></div>
+            <div class="col-12 col-md-2"><a class="btn btn-dark" href="http://www.ticketmaster.com" role="button" target="_blank">TICKETS</a></div>
         </div>
         <hr>
         <br>
@@ -127,7 +127,7 @@
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4"><h4>14 July 2021</h4></div>
             <div class="col-12 col-md-5 venue"><p>SWX, Bristol</p></div>
-            <div class="col-12 col-md-2"><button type="button" class="btn btn-dark">TICKETS</button></div>
+            <div class="col-12 col-md-2"><a class="btn btn-dark" href="http://www.ticketmaster.com" role="button" target="_blank">TICKETS</a></div>
         </div>
         <hr>
         <br>
